Fix mixups of block coords & chunk coords. And a missing continue.